--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
   <h1><a href="index.html">Professor Plate's Notebook</a></h1>
   <nav class="top-links">
-    <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
-      romantic quick kit
+    <a class="quickkit-pill" href="Romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+      Romantic quick kit
     </a>
   </nav>
 </header>
