--- a/old-post54.html
+++ b/old-post54.html
@@ -16,8 +16,8 @@
 <main>
 <article>
   <h2>54 Reclaiming the Romantic “Author”</h2>
-  <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
-  <p>The most common caricature of Romanticism is that it requires a mystical séance with a dead writer’s soul. This post argues for a more rigorous view: the Romantic "author" is not an oracle to be channeled but a <strong>reconstructable practice</strong> to be analyzed. <a href="romantic-kit-hermeneutics.html">Romantic hermeneutics</a> gives us a powerful method to evidence this practice, whether the text comes from a human or a machine.</p>
+  <p><a href="Romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
+  <p>The most common caricature of Romanticism is that it requires a mystical séance with a dead writer’s soul. This post argues for a more rigorous view: the Romantic "author" is not an oracle to be channeled but a <strong>reconstructable practice</strong> to be analyzed. <a href="Romantic-kit-hermeneutics.html">Romantic hermeneutics</a> gives us a powerful method to evidence this practice, whether the text comes from a human or a machine.</p>
 
   <h3>A Practical Demonstration</h3>
   <p>Let's move from theory to practice. I prompted an AI with a simple request: "Write a four-line poem about a city at night." Here is the output:</p>
@@ -49,7 +49,7 @@
   <p>This is the answer to the "teenage diary" version of authenticity. The Romantic method doesn't reward raw feeling; it rewards <strong>evidenced individuality</strong>. It gives us a way to talk about the unique signature of a work with analytical precision, freeing us from the dead-end debate about the ghost in the machine.</p>
 
   <hr>
-  <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
+  <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
   <p><a href="index.html">Home</a> | <a href="post53.html">Previous Post</a> | <a href="post55.html">Next Post</a></p>
 </article>
 </main>
