--- a/old-post55.html
+++ b/old-post55.html
@@ -16,8 +16,8 @@
   <main>
     <article>
       <h2>55 More Than Bullshit: A Romantic Reading of the Textual Unconscious</h2>
-      <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
-      <p>A common and powerful critique labels LLMs as "bullshit machines." Drawing on philosopher Harry Frankfurt, this argument states that AI is not lying (which requires knowing the truth) but is profoundly indifferent to truth. Its output is fluent mimicry without belief. From a Romantic perspective, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>.</p>
+      <p><a href="Romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
+      <p>A common and powerful critique labels LLMs as "bullshit machines." Drawing on philosopher Harry Frankfurt, this argument states that AI is not lying (which requires knowing the truth) but is profoundly indifferent to truth. Its output is fluent mimicry without belief. From a Romantic perspective, this is a charge of radical <a href="Romantic-kit-authenticity.html">inauthenticity</a>.</p>
       <p>But Romantic hermeneutics offers a more productive path. It allows us to move past the author's (or model's) state of mind and instead focus on the <em>surplus meaning</em> within the text itself. The question isn't whether the AI believes what it says, but what unconscious patterns and cultural logics are revealed in its speech.</p>
 
       <h3>Schlegel's Reframe: The Work That "Aims at More Than It Knows"</h3>
@@ -25,7 +25,7 @@
       <p>Applied to AI, this is a breakthrough. An LLM, trained on a vast corpus of human language, becomes a unique conduit for the "textual unconscious" of our culture. Its output is a dream-work of the dataset, unintentionally revealing the latent metaphors, hidden biases, and deep-seated myths embedded in its training data.</p>
       
       <h3>From Bullshit to Artifact: An Example</h3>
-      <p>To read for this surplus is a specific application of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>. Consider an AI prompted to write a corporate statement about "innovation." It might produce a text that combines the language of digital disruption with metaphors of farming and natural growth ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
+      <p>To read for this surplus is a specific application of our <a href="Romantic-kit-hermeneutics.html">hermeneutic method</a>. Consider an AI prompted to write a corporate statement about "innovation." It might produce a text that combines the language of digital disruption with metaphors of farming and natural growth ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
       <ul>
           <li>The "bullshit" reading dismisses this as meaningless cliché.</li>
           <li>The <em>Romantic hermeneutic reading</em> sees a rich cultural artifact. The unintentional fusion of technological and agrarian language reveals a deep-seated American myth: the Jeffersonian ideal of the yeoman farmer being unconsciously mapped onto the Silicon Valley entrepreneur. The AI doesn't "believe" this, but its text reveals a powerful cultural logic.</li>
@@ -36,7 +36,7 @@
       <p>The "bullshit" label is an interpretive dead end. It invites us to dismiss the text. Romantic hermeneutics invites us to lean in closer. It reframes the AI's lack of consciousness from a moral failure into an unprecedented opportunity: to read the outputs as direct, unmediated expressions of the collective linguistic patterns and myths that shape our world.</p>
 
       <hr>
-      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
+      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
       <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
     </article>
   </main>
