--- a/old-post56.html
+++ b/old-post56.html
@@ -16,17 +16,17 @@
   <main>
     <article>
       <h2>56 Beyond the Teenage Diary: The Rigor of Romantic Individuality</h2>
-      <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
+      <p><a href="Romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
       <p>Critics often reduce the Romantic concept of "individuality" to a caricature: the artist as a confessional diarist, pouring out unfiltered emotions. In this view, sincerity is the only measure of worth. But this misses the point entirely. For the Romantics, individuality was not a mood to be felt but a <strong>structural phenomenon</strong> to be demonstrated in the work itself.</p>
       <p>True individuality, in the hermeneutic sense, is the evidence of a singular mind shaping its material. It's a demonstrable unity of pattern across a body of work, something an interpreter can trace and prove.</p>
 
       <h3>Individuality as an Analytical Problem</h3>
-      <p>How do we evidence this? By applying the <a href="romantic-kit-hermeneutics.html">two-rail method</a> of interpretation. Individuality emerges at the intersection of the universal and the particular.</p>
+      <p>How do we evidence this? By applying the <a href="Romantic-kit-hermeneutics.html">two-rail method</a> of interpretation. Individuality emerges at the intersection of the universal and the particular.</p>
       <ul>
         <li><strong>On the Grammatical Rail:</strong> We identify the shared conventions the work uses—its genre, language, and historical forms. This is the background against which individuality becomes visible.</li>
         <li><strong>On the Psychological Rail:</strong> We trace the author's (or system's) unique and recurring deviations from that background. We look for a consistent signature in its diction, syntax, metaphorical habits, and structural choices.</li>
       </ul>
-      <p>Individuality is the coherent pattern that emerges from these choices. It’s not about accessing the author’s private feelings; it’s about reconstructing their public, textual practice. This is the core of what the toolkit calls <a href="romantic-kit-authenticity.html">The Evidenced 'Self'</a>.</p>
+      <p>Individuality is the coherent pattern that emerges from these choices. It’s not about accessing the author’s private feelings; it’s about reconstructing their public, textual practice. This is the core of what the toolkit calls <a href="Romantic-kit-authenticity.html">The Evidenced 'Self'</a>.</p>
 
       <h3>AI and "Synthetic Individuality"</h3>
       <p>This rigorous definition allows us to ask a far more interesting question about AI. Instead of asking, "Does this AI sound sincere?" we can ask, "Can I trace a consistent stylistic signature across this model's outputs?"</p>
@@ -34,10 +34,10 @@
 
       <h3>Why This Matters</h3>
       <p>Dismissing individuality as a teenage diary trivializes the act of interpretation. The real work of a critic is to move beyond subjective impressions and show, with evidence, how a text’s unique unity emerges from its specific choices.</p>
-      <p>Romantic hermeneutics gives us the tools to perform this analysis. It allows us to talk about the "voice" of a work with precision, freeing us from the need to romanticize the writer—human or otherwise.</p>
+      <p>Romantic hermeneutics gives us the tools to perform this analysis. It allows us to talk about the "voice" of a work with precision, freeing us from the need to Romanticize the writer—human or otherwise.</p>
 
       <hr>
-      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
+      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
       <p><a href="index.html">Home</a> | <a href="post55.html">Previous Post</a> | <a href="post57.html">Next Post</a></p>
     </article>
   </main>
