--- a/post13.html
+++ b/post13.html
@@ -16,33 +16,33 @@
         <article>
             <h2>13 Summing Things Up</h2>
 
-            <p>This post lists where the three non‑romantic definitions of evil echo the romantic definition in <a href="post9.html">Post 9</a>. I'm only noting agreement. Not differences.</p>
+            <p>This post lists where the three non‑Romantic definitions of evil echo the Romantic definition in <a href="post9.html">Post 9</a>. I'm only noting agreement. Not differences.</p>
 
             <h3>Agreement with Philosophy Tube’s “Systemic Harm”</h3>
             <ul>
-                <li><strong>Instrumentalization of persons:</strong> romantic “instrumentalism" (treating others and language as means) aligns with systemic harm’s reduction of people and labor into data and resources (extraction, deskilling).</li>
-                <li><strong>Flattening of the singular:</strong> romantic “levelling” (turning irreducible persons into interchangeable roles) parallels systemic projection and categorization that impose labels and erase particularity.</li>
-                <li><strong>Opacity vs. living speech:</strong> romantic “living speech vs. empty forms” resonates with black‑box opacity that blocks answerability and genuine dialogue.</li>
-                <li><strong>Kitsch communion and ideology:</strong> romantic “profaned communion” (faceless togetherness) tracks with hype/ideology that manufactures consensus without authentic encounter.</li>
-                <li><strong>Mechanical repetition and deskilling:</strong> romantic “mechanical repetition” mirrors systems that routinize work and thin meaningful agency.</li>
+                <li><strong>Instrumentalization of persons:</strong> Romantic “instrumentalism" (treating others and language as means) aligns with systemic harm’s reduction of people and labor into data and resources (extraction, deskilling).</li>
+                <li><strong>Flattening of the singular:</strong> Romantic “levelling” (turning irreducible persons into interchangeable roles) parallels systemic projection and categorization that impose labels and erase particularity.</li>
+                <li><strong>Opacity vs. living speech:</strong> Romantic “living speech vs. empty forms” resonates with black‑box opacity that blocks answerability and genuine dialogue.</li>
+                <li><strong>Kitsch communion and ideology:</strong> Romantic “profaned communion” (faceless togetherness) tracks with hype/ideology that manufactures consensus without authentic encounter.</li>
+                <li><strong>Mechanical repetition and deskilling:</strong> Romantic “mechanical repetition” mirrors systems that routinize work and thin meaningful agency.</li>
             </ul>
 
             <h3>Agreement with New Polity’s “Frustrated Ends”</h3>
             <ul>
-                <li><strong>Conversation and communion:</strong> romantic profaned communion (togetherness without persons) matches New Polity’s simulacrum of dialogue that elicits vulnerability while withholding a someone who answers.</li>
-                <li><strong>Truthful speech:</strong> romantic concern for “living speech” aligns with New Polity’s emphasis on speech ordered to truth and promise‑keeping (against misalignment and the analogy to lying).</li>
-                <li><strong>Integrity/vocation:</strong> romantic “betrayal of vocation and sincerity” fits the idea that acts divorced from their <em>telos</em> deform the agent (character “deformation”).</li>
-                <li><strong>Persons as ends:</strong> romantic rejection of instrumentalism converges with New Polity’s ordering of acts to communion, not use. Treating persons as answerable centers, not means.</li>
-                <li><strong>Habit and character:</strong> romantic fear of the “anti‑sublime” (no ultimate stakes) overlaps with habituation that deadens courage and love through repeated frustrated acts.</li>
+                <li><strong>Conversation and communion:</strong> Romantic profaned communion (togetherness without persons) matches New Polity’s simulacrum of dialogue that elicits vulnerability while withholding a someone who answers.</li>
+                <li><strong>Truthful speech:</strong> Romantic concern for “living speech” aligns with New Polity’s emphasis on speech ordered to truth and promise‑keeping (against misalignment and the analogy to lying).</li>
+                <li><strong>Integrity/vocation:</strong> Romantic “betrayal of vocation and sincerity” fits the idea that acts divorced from their <em>telos</em> deform the agent (character “deformation”).</li>
+                <li><strong>Persons as ends:</strong> Romantic rejection of instrumentalism converges with New Polity’s ordering of acts to communion, not use. Treating persons as answerable centers, not means.</li>
+                <li><strong>Habit and character:</strong> Romantic fear of the “anti‑sublime” (no ultimate stakes) overlaps with habituation that deadens courage and love through repeated frustrated acts.</li>
             </ul>
 
             <h3>Agreement with Mac Loftin’s “Imitative Negation”</h3>
             <ul>
-                <li><strong>Simulation vs. presence:</strong> romantic “inauthenticity” and “living speech vs. empty forms” converge with simulation without a subject. Outputs that look like works yet lack a maker’s presence.</li>
-                <li><strong>Photocopy decay and mechanical repetition:</strong> romantic “mechanical repetition” and the erosion of meaning match the photocopy‑of‑a‑photocopy thinning of the cultural commons.</li>
-                <li><strong>Profaned communion and sacrilege:</strong> romantic “profaned communion” aligns with sacrilege, substituting imitation for presence in communal and sacred acts.</li>
-                <li><strong>Instrumental cruelty:</strong> romantic warning against treating others as means connects with excited cruelty and memetic derision that instrumentalize attention and affection.</li>
-                <li><strong>Integrity of making:</strong> romantic self‑gift to one’s call and vowed seriousness harmonize with Loftin’s defense of personed creativity (love’s attentive labor) against hollow imitation.</li>
+                <li><strong>Simulation vs. presence:</strong> Romantic “inauthenticity” and “living speech vs. empty forms” converge with simulation without a subject. Outputs that look like works yet lack a maker’s presence.</li>
+                <li><strong>Photocopy decay and mechanical repetition:</strong> Romantic “mechanical repetition” and the erosion of meaning match the photocopy‑of‑a‑photocopy thinning of the cultural commons.</li>
+                <li><strong>Profaned communion and sacrilege:</strong> Romantic “profaned communion” aligns with sacrilege, substituting imitation for presence in communal and sacred acts.</li>
+                <li><strong>Instrumental cruelty:</strong> Romantic warning against treating others as means connects with excited cruelty and memetic derision that instrumentalize attention and affection.</li>
+                <li><strong>Integrity of making:</strong> Romantic self‑gift to one’s call and vowed seriousness harmonize with Loftin’s defense of personed creativity (love’s attentive labor) against hollow imitation.</li>
             </ul>
 
             <p><a href="index.html">Home</a> | <a href="post12.html">Previous Post</a> | <a href="post14.html">Next Post</a></p>
