--- a/post54.html
+++ b/post54.html
@@ -16,7 +16,7 @@
 <main>
 <article>
   <div class="top-links">
-    <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+    <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
   </div>
   <h2>54 The Author-Function in the Machine: A Romantic Test</h2>
   <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art. A core part of that art was reconstructing the author's singular practice.</p>
@@ -41,7 +41,7 @@
   <p>The question, then, is not whether an AI can have a "voice." The more unsettling question is whether the "voice" we've always found in human texts is also, in part, a similar reconstruction—a coherent pattern our minds assemble after the fact. Applying this more rigorous Romantic method to AI doesn't elevate the machine; it forces us to question the nature of the very "presence" we thought was so simple to begin with.</p>
   
   <hr>
-  <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+  <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
   <p><a href="index.html">Home</a> | <a href="post53.html">Previous Post</a> | <a href="post55.html">Next Post</a></p>
 </article>
 </main>
