--- a/post55.html
+++ b/post55.html
@@ -16,10 +16,10 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>55 More Than Bullshit? Reading the Textual Unconscious of an Unconscious Text</h2>
-      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. The machine speaks words it does not inhabit.</p>
+      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="Romantic-kit-authenticity.html">inauthenticity</a>. The machine speaks words it does not inhabit.</p>
       <p>But the Romantic toolkit was more sophisticated than this. Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He even suggested that a text's <strong>"confusions" and contradictions</strong> were themselves meaningful, revealing the author's internal struggles. This is a method that embraces flaws. What happens if we apply this generous lens to AI?</p>
 
       <h3>From Bullshit to Artifact: An Example</h3>
@@ -35,7 +35,7 @@
       <p>This reframes the "bullshit" critique. Perhaps the true bullshit isn't the AI's indifference to truth, but the interpretive hubris of treating its statistical noise as a profound, symbolic dream. We ask the machine to dream for us, and then congratulate ourselves on our brilliant interpretation of the result.</p>
 
       <hr>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
     </article>
   </main>
