--- a/post56.html
+++ b/post56.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>56 The Specter of Synthetic Individuality</h2>
       <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong>: a demonstrable, unique pattern of choices that gives a work its signature. The ideal was not monolithic; it had distinct national flavors.</p>
@@ -25,7 +25,7 @@
         <li>In <strong>England</strong>, Wordsworth sought it in the "real language of men," a rejection of aristocratic artifice.</li>
         <li>In <strong>America</strong>, Emerson radicalized it into an ethical command of nonconformity: "Trust thyself."</li>
       </ul>
-      <p>In all cases, individuality was an analytical problem, not a mood. This allows us to run a fascinating, and troubling, experiment. Can we use the <a href="romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
+      <p>In all cases, individuality was an analytical problem, not a mood. This allows us to run a fascinating, and troubling, experiment. Can we use the <a href="Romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
 
       <h3>An Analytical Test Case</h3>
       <p>Imagine analyzing a hundred outputs from a specific fine-tuned model. We could trace its habits and find a coherent pattern—a preference for complex sentences, a tic of using maritime metaphors, a recurring philosophical theme. The Romantic method would compel us to say we have identified its "individuality." We have evidenced a unique, recognizable "voice."</p>
@@ -36,7 +36,7 @@
       <p>The Romantic tool, designed to elevate and prove the uniqueness of the human soul, accidentally becomes a weapon that undermines it.</p>
       
       <hr>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post55.html">Previous Post</a> | <a href="post57.html">Next Post</a></p>
     </article>
   </main>
