--- a/post57.html
+++ b/post57.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>57 The Hermeneutic Blind Spot: Insisting on a Ghost</h2>
       <p>A purely systematic analysis of AI—looking only at datasets and algorithms—feels incomplete. The Romantic method, with its insistence on a <strong>double vision</strong>, seems to offer a richer path. It demands we analyze both the <strong>grammatical rail</strong> (the system) and the <strong>psychological rail</strong> (the singular practice).</p>
@@ -31,7 +31,7 @@
       <p>By insisting on the "psychological rail," are we really understanding the text on its own terms? Or are we applying a powerful tool to a context where its core premise is false? This might be the ultimate "hermeneutic blind spot." The very method designed to overcome misunderstanding may be forcing us to misunderstand the most fundamental quality of AI: its radical, inhuman emptiness.</p>
       
       <hr>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post56.html">Previous Post</a> | <a href="post58.html">Next Post</a></p>
     </article>
   </main>
