--- a/post58.html
+++ b/post58.html
@@ -17,7 +17,7 @@
     <article>
       <h2>58 “Better Than It Understood Itself”: A Coda on a Method Pushed to Its Limit</h2>
       <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <p>The boldest claim of Romantic hermeneutics is Schleiermacher's goal: to understand a work "better than [the author] understood himself." This meant making an author's unconscious patterns explicit. This principle was tested and adapted by the Romantics themselves as they grappled with the new <strong>technologies</strong> of their own era. They weren't just simple Luddites; they were fascinated by automata, and they expertly used the new technology of mass printing to build their movement. Their critique was nuanced: Carlyle's "Mechanical Age" was a critique of a <em>metaphorical</em> machine logic invading society, not just a complaint about factories.</p>
       <p>This complex history makes the confrontation with AI even more poignant. What happens when we apply their ultimate interpretive principle to a machine they could only imagine in gothic fiction? The answer is both simple and devastating. We can, without question, understand an AI-generated text better than it understood itself, because the AI understood nothing.</p>
@@ -37,7 +37,7 @@
       <p>Ironically, the Romantics, who navigated the technological disruptions of their own age with a mix of anxiety and adoption, provided an interpretive framework so human-centric that it struggles to account for a technology that doesn't just print our words, but writes them itself. Their method, when pushed to this limit, becomes a diagnostic tool for understanding ourselves.</p>
 
       <hr>
-      <p class="series-note">This post concludes the <em>"Steelmanning the Romantics"</em> series. The <a href="romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
+      <p class="series-note">This post concludes the <em>"Steelmanning the Romantics"</em> series. The <a href="Romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
       <p><a href="index.html">Home</a> | <a href="post57.html">Previous Post</a> | <a href="post59.html">Next Post</a></p>
     </article>
   </main>
