--- a/post59.html
+++ b/post59.html
@@ -16,11 +16,11 @@
   <main>
     <article>
       <div class="kit-links-small">
-        <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
+        <a href="Romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
         <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
       </div>
       <h2>59 Putting the Toolkit to Work: A Hermeneutic Stress-Test on "Hero"</h2>
-      <p>In earlier posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I read the "Hero" music video from several angles. To conclude this "Steelman" series, I want to return to it as a final stress-test, applying the rigorous method from our <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to see not just what it reveals, but where it strains.</p>
+      <p>In earlier posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I read the "Hero" music video from several angles. To conclude this "Steelman" series, I want to return to it as a final stress-test, applying the rigorous method from our <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to see not just what it reveals, but where it strains.</p>
 
       <h3>Step 1 & 2: Running the Method (Hypothesis and The Two Rails)</h3>
       <ul>
