--- a/post9.html
+++ b/post9.html
@@ -16,7 +16,7 @@
         <article>
             <h2>9 Romantic Evil</h2>
 
-<p>What I've got here is what I'll call my romantic account of evil. It's my own thoughts based on watching <a href="https://www.youtube.com/watch?v=xk2UetWsO-M&t=2s">Isaiah Berlin’s lectures on romanticism</a>. My goal is to clarify what a romantic might think of as evil even if they wouldn't use that word.</p>
+<p>What I've got here is what I'll call my Romantic account of evil. It's my own thoughts based on watching <a href="https://www.youtube.com/watch?v=xk2UetWsO-M&t=2s">Isaiah Berlin’s lectures on Romanticism</a>. My goal is to clarify what a Romantic might think of as evil even if they wouldn't use that word.</p>
 
 <h3>Romantic Evil</h3>
 <p><strong>Definition:</strong> Evil is any betrayal of vocation and sincerity. A refusal of the singular call that gives a life its shape. It is the willing exchange of destiny for comfort, of tragic seriousness for safety, of living speech for empty forms.</p>
@@ -33,7 +33,7 @@
 </ul>
 
 <h3>Moral Center</h3>
-<p>Goodness is integrity: self-gift to one’s call; fidelity under risk; conversation that meets a person as a person; and a willingness to suffer the tragic costs of living in truth. The romantic conscience prizes the singular, the vowed, and the answerable over comfort, utility, and faceless universals.</p>
+<p>Goodness is integrity: self-gift to one’s call; fidelity under risk; conversation that meets a person as a person; and a willingness to suffer the tragic costs of living in truth. The Romantic conscience prizes the singular, the vowed, and the answerable over comfort, utility, and faceless universals.</p>
 
             <p><a href="index.html">Home</a> | <a href="post8.html">Previous Post</a> | <a href="post10.html">Next Post</a></p>
         </article>
