--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -14,13 +14,13 @@
 <main>
   <article>
     <div class="top-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Authenticity (The Evidenced 'Self')</h1>
     <p>For the Romantics, authenticity was not a confession of sincere feelings. It was an aesthetic and ethical ideal: a work of art or a life should be a true expression of a singular, inner vision, not an imitation of external models. Authenticity is something you *achieve* in the work, not something you simply feel. It is a quality an interpreter can demonstrate through analysis.</p>
 
     <h2>How to Read for Authenticity</h2>
-    <p>Authenticity is discovered by applying the <a href="romantic-kit-hermeneutics.html">two-rail method</a>. It is the demonstrable coherence between the <strong>psychological side</strong> (the work's unique pattern of choices) and the <strong>grammatical side</strong> (the conventions it engages with). An "authentic" work is one where a distinctive vision has shaped its own unique form.</p>
+    <p>Authenticity is discovered by applying the <a href="Romantic-kit-hermeneutics.html">two-rail method</a>. It is the demonstrable coherence between the <strong>psychological side</strong> (the work's unique pattern of choices) and the <strong>grammatical side</strong> (the conventions it engages with). An "authentic" work is one where a distinctive vision has shaped its own unique form.</p>
 
     <h3>Three National Case Studies</h3>
     <p>The ideal of authenticity took different forms depending on the cultural context.</p>
@@ -44,7 +44,7 @@
       </li>
     </ul>
     <div class="bottom-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
 
   </article>
