--- a/romantic-kit-contexts-germany.html
+++ b/romantic-kit-contexts-germany.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
   <script src="template.js"></script>
-  <meta name="description" content="A guide to German Romanticism (Jena School), focusing on its key philosophical contributions like Naturphilosophie, romantic irony, and the theory of the artwork."/>
+  <meta name="description" content="A guide to German Romanticism (Jena School), focusing on its key philosophical contributions like Naturphilosophie, Romantic irony, and the theory of the artwork."/>
 </head>
 <body>
 <header data-template="header"></header>
 <main>
   <article>
     <div class="top-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Contexts: Germany (The Philosophical Engine)</h1>
     <p>German Romanticism, particularly the circle in Jena (c. 1795–1805), was the intellectual crucible of the movement. More than a literary style, it was a philosophical revolution that sought to fuse poetry with theory, art with science, and life with thought. It provided the rigorous concepts that would be adapted and transformed across Europe.</p>
@@ -22,7 +22,7 @@
     <h3>Signature Ideas</h3>
     <ul>
       <li><strong>The Fusion of Everything:</strong> The central project, articulated by Friedrich Schlegel, was "progressive universal poetry"—a dynamic, infinitely expandable form of art that could absorb philosophy, criticism, and mythology. The goal was to overcome the fragmentation of modern life.</li>
-      <li><strong><a href="romantic-kit-organic-form.html">Organic Unity</a> as Metaphysics:</strong> Friedrich Schelling’s <em>Naturphilosophie</em> gave philosophical weight to the organic metaphor. It argued that nature and mind were two sides of the same living, creative reality, providing a powerful basis for theories of organic form in art.</li>
+      <li><strong><a href="Romantic-kit-organic-form.html">Organic Unity</a> as Metaphysics:</strong> Friedrich Schelling’s <em>Naturphilosophie</em> gave philosophical weight to the organic metaphor. It argued that nature and mind were two sides of the same living, creative reality, providing a powerful basis for theories of organic form in art.</li>
       <li><strong>Romantic Irony:</strong> A sophisticated concept where a work of art demonstrates self-awareness. The author can signal their detachment from their own creation, acknowledging its limits and opening it to endless interpretation. It is a mark of artistic freedom and intellectual agility.</li>
       <li><strong>The Primacy of the Aesthetic:</strong> For the German Romantics, art was not mere decoration; it was the highest form of knowledge. They believed a work of art could reveal truths about the Absolute that rational philosophy could only point to.</li>
     </ul>
@@ -40,7 +40,7 @@
       <li>Friedrich Schlegel, <a href="https://archive.org/details/friedrichschlege0000schl_o3n2"><em>Philosophical Fragments</em> (PDF)</a> — A deeper dive into the theoretical project.</li>
     </ul>
     <div class="bottom-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
   </article>
 </main>
