--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -14,7 +14,7 @@
 <main>
   <article>
     <div class="top-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>The Organic vs. The Mechanical (A Theory of Form)</h1>
     <p>The Romantics proposed a radical alternative to the Enlightenment's view of the universe as a clockwork machine. They saw nature, art, and even society not as mechanical assemblies of parts, but as <em>living organisms</em>: dynamic, developing wholes where the form grows from an inner, vital principle.</p>
@@ -26,7 +26,7 @@
       <li><strong>Mechanical Form:</strong> Form is imposed on the material from the outside, like a cookie-cutter on dough. The rules are pre-determined and generic. The result is predictable and lifeless.</li>
       <li><strong>Organic Form:</strong> Form is innate. It "shapes, as it develops, itself from within." Like a plant from a seed, the form grows out of the work's specific content and purpose. The parts and the whole are interdependent; you cannot change one without altering the other.</li>
     </ul>
-    <p>In the terms of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>, a work has organic form when its <strong>grammatical</strong> structure (its language, genre, and shape) is a necessary and unique consequence of its singular <strong>psychological</strong> vision.</p>
+    <p>In the terms of our <a href="Romantic-kit-hermeneutics.html">hermeneutic method</a>, a work has organic form when its <strong>grammatical</strong> structure (its language, genre, and shape) is a necessary and unique consequence of its singular <strong>psychological</strong> vision.</p>
 
     <h3>Philosophical Roots: Nature as a Living Whole</h3>
     <p>This aesthetic theory grew out of a deeper philosophical shift, primarily in Germany.</p>
@@ -53,7 +53,7 @@
       </li>
     </ul>
     <div class="bottom-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
   </article>
 </main>
