--- a/romantic-kit-technology-machine.html
+++ b/romantic-kit-technology-machine.html
@@ -14,10 +14,10 @@
 <main>
   <article>
     <div class="top-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Technology &amp; The Machine (The Shadow of the Organic)</h1>
-    <p>If authenticity and <a href="romantic-kit-organic-form.html">organic unity</a> were the Romantics' ideals, "the Machine" was their shadow. Confronted with the dawn of the Industrial Revolution, they were among the first thinkers to analyze the profound ways technology reshapes human life, nature, and the self. Their response was not a simple rejection, but a complex mixture of critique, fascination, and anxiety.</p>
+    <p>If authenticity and <a href="Romantic-kit-organic-form.html">organic unity</a> were the Romantics' ideals, "the Machine" was their shadow. Confronted with the dawn of the Industrial Revolution, they were among the first thinkers to analyze the profound ways technology reshapes human life, nature, and the self. Their response was not a simple rejection, but a complex mixture of critique, fascination, and anxiety.</p>
     <p>For them, "the Machine" was both literal and metaphorical. It represented not only the new engines and factories but also any system—philosophical, social, or aesthetic—that felt rigid, impersonal, and disenchanted.</p>
 
     <h2>Three Critical Traditions</h2>
@@ -47,7 +47,7 @@
       </li>
     </ul>
     <div class="bottom-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
   </article>
 </main>
