--- a/old-post53.html
+++ b/old-post53.html
@@ -23,7 +23,7 @@
       <p>This is not a nostalgic defense of the "human spark." It is a methodological argument that will do three things:</p>
       <ul>
         <li><strong>Re-center the Method:</strong> We will show that Romantic interpretation is a disciplined, evidence-based practice of reading, not a subjective search for feelings. The "author," whether human or machine, is a <em>reconstructable practice</em> we can trace in the text.</li>
-        <li><strong>Provide a Toolkit:</strong> We will not just theorize. The <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> is the intellectual home base for this series. It contains the key concepts, a step-by-step method, and links to primary sources. Use it as your guide.</li>
+        <li><strong>Provide a Toolkit:</strong> We will not just theorize. The <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> is the intellectual home base for this series. It contains the key concepts, a step-by-step method, and links to primary sources. Use it as your guide.</li>
         <li><strong>Apply the Method to AI:</strong> Each post in this series will use the toolkit to analyze the core problems of AI—from "bullshit" to "individuality"—demonstrating that the 200-year-old method is more relevant than ever.</li>
       </ul>
       
@@ -31,7 +31,7 @@
       <p>Start with the toolkit. The posts that follow are applications of its method. This series is an argument that the best way to understand our future with AI is to master the intellectual tools of the past.</p>
 
       <hr>
-      <p class="series-note">This post inaugurates <em>Defense of Romanticism</em>. The <a href="romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
+      <p class="series-note">This post inaugurates <em>Defense of Romanticism</em>. The <a href="Romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
       <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
     </article>
   </main>
