--- a/old-post57.html
+++ b/old-post57.html
@@ -16,10 +16,10 @@
   <main>
     <article>
       <h2>57 The Interpreter’s Blind Spot: Why Analyzing the System Isn't Enough</h2>
-      <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
+      <p><a href="Romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
 
       <p>Analysis of AI-generated text often defaults to a systematic view: we talk about the model's architecture, the biases in its training data, the statistical probabilities of its word choices. This is necessary work. But if it's all we do, we commit a fundamental interpretive error. We are trying to understand a text by looking at only one half of the evidence.</p>
-      <p><a href="romantic-kit-hermeneutics.html">Romantic hermeneutics</a>, as laid out by Schleiermacher, insists that true understanding requires a <em>double vision</em>. It demands that we operate on two rails at once: the grammatical/systematic and the psychological/singular.</p>
+      <p><a href="Romantic-kit-hermeneutics.html">Romantic hermeneutics</a>, as laid out by Schleiermacher, insists that true understanding requires a <em>double vision</em>. It demands that we operate on two rails at once: the grammatical/systematic and the psychological/singular.</p>
       
       <h3>The Lure of the System</h3>
       <p>In AI discourse, the <em>grammatical rail</em>—the analysis of the system—is dominant. We can produce neat visualizations, map the dataset, and call it "understanding." But this approach, on its own, is a form of reductionism. It treats the text as a mere symptom of the system that produced it.</p>
@@ -37,7 +37,7 @@
       <p>A purely systematic analysis can explain the general probabilities that made a text possible. But it can never explain the specific choices that make a text actual. Recovering the other half—the psychological rail—is what allows us to move from explaining a process to understanding a work. It is what makes our work hermeneutics, not just data science.</p>
       
       <hr>
-      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
+      <p class="series-note">This post is part of <em>Defense of Romanticism</em>. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy; the series assumes it.</p>
       <p><a href="index.html">Home</a> | <a href="post56.html">Previous Post</a> | <a href="post58.html">Next Post</a></p>
     </article>
   </main>
