--- a/old-post58.html
+++ b/old-post58.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <h2>58 “Better Than He Understood Himself”: Why Interpretation Is Irreducible</h2>
-      <p><a href="romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
+      <p><a href="Romantic-quick-kit.html">Romantic Hermeneutics — Quick Kit</a></p>
 
       <p>One of Schleiermacher’s most audacious claims is that the goal of interpretation is to understand an author "better than he understood himself." To a computationalist, this sounds like nonsense. If meaning is a product of a generative process, the best one could ever do is perfectly replicate that process. How could an interpreter possibly surpass the source?</p>
       <p>This question reveals the fundamental difference between two models of understanding. The computational model sees understanding as <em>replication</em>. The Romantic hermeneutic model sees it as <em>illumination</em>. This is why interpretation remains an irreducible human art.</p>
@@ -27,18 +27,18 @@
       <h3>The Hermeneutic Goal: To Illuminate the Work</h3>
       <p>Romantic hermeneutics is not trying to replicate the author's brain state or the model's processing path. It is a productive act that adds layers of understanding to the work itself. To understand a work "better than" its creator means to:</p>
       <ul>
-        <li><strong>Articulate the Tacit:</strong> The interpreter makes explicit the implicit rules, patterns, and stylistic habits that the author (or model) followed without full self-awareness. This is the work of the <a href="romantic-kit-hermeneutics.html">psychological rail</a>.</li>
+        <li><strong>Articulate the Tacit:</strong> The interpreter makes explicit the implicit rules, patterns, and stylistic habits that the author (or model) followed without full self-awareness. This is the work of the <a href="Romantic-kit-hermeneutics.html">psychological rail</a>.</li>
         <li><strong>Expand the Context:</strong> The interpreter places the work into historical, philosophical, and intertextual conversations that were unavailable to its creator, revealing new dimensions of its significance.</li>
         <li><strong>Reveal the Surplus:</strong> The interpreter uncovers the <a href="post55.html">unconscious meanings</a> and cultural logics that the work reveals in spite of itself, fulfilling Schlegel's insight that a work "aims at more than it knows."</li>
       </ul>
       <p>An AI cannot do this, because this is not a generative task. It is an analytical and synthetic one. Interpretation doesn't just reproduce what's there; it creates a new, richer understanding of what the work *is* and *does* in the world.</p>
 
       <h3>Conclusion to the Series</h3>
-      <p>This series, <em>Defense of Romanticism</em>, began as a response to the caricature of Romanticism as a naïve or sentimental worldview. By building the <a href="romantic-quick-kit.html">Quick Kit</a> and applying its methods, we have shown that Romanticism is, in fact, a rigorous and profoundly relevant analytical framework for our technological moment.</p>
+      <p>This series, <em>Defense of Romanticism</em>, began as a response to the caricature of Romanticism as a naïve or sentimental worldview. By building the <a href="Romantic-quick-kit.html">Quick Kit</a> and applying its methods, we have shown that Romanticism is, in fact, a rigorous and profoundly relevant analytical framework for our technological moment.</p>
       <p>It gives us the tools to move beyond simplistic binaries—human vs. machine, soul vs. code, sincerity vs. bullshit—and perform a more nuanced, evidence-based analysis of any text. It proves that the act of interpretation is not a nostalgic search for a ghost in the machine, but a vital, ongoing human project of making meaning. The work continues.</p>
 
       <hr>
-      <p class="series-note">This post concludes <em>Defense of Romanticism</em>. The <a href="romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
+      <p class="series-note">This post concludes <em>Defense of Romanticism</em>. The <a href="Romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
       <p><a href="index.html">Home</a> | <a href="post57.html">Previous Post</a> | <a href="post59.html">Next Post</a></p>
     </article>
   </main>
