--- a/old-post59.html
+++ b/old-post59.html
@@ -16,11 +16,11 @@
   <main>
     <article>
       <h2>59 Putting the Toolkit to Work: A Hermeneutic Reading of "Hero"</h2>
-      <p>In a previous series of posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I explored the music video for "Hero" from several angles. Now, to conclude the <em>Defense of Romanticism</em>, I want to return to it one last time. The goal is not to find a "final" meaning, but to demonstrate how the rigorous method laid out in our <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> allows for a deeper, more structured analysis.</p>
+      <p>In a previous series of posts (<a href="post45.html">45</a>-<a href="post50.html">50</a>), I explored the music video for "Hero" from several angles. Now, to conclude the <em>Defense of Romanticism</em>, I want to return to it one last time. The goal is not to find a "final" meaning, but to demonstrate how the rigorous method laid out in our <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> allows for a deeper, more structured analysis.</p>
       <p>This is a live demonstration of the toolkit in action.</p>
 
       <h3>Step 1: The Initial Hypothesis (The Hermeneutic Circle Begins)</h3>
-      <p>As our <a href="romantic-kit-hermeneutics.html">method</a> suggests, we begin with a preliminary sense of the whole. My initial reading in <a href="post45.html">posts 45 and 46</a> was that the video presents a story of <a href="romantic-kit-authenticity.html">authentic</a>, private heroism, rejecting the public "parade" of fame for the sincere struggle of fatherhood. This is our starting hypothesis: the video champions a quiet, modern Romantic hero.</p>
+      <p>As our <a href="Romantic-kit-hermeneutics.html">method</a> suggests, we begin with a preliminary sense of the whole. My initial reading in <a href="post45.html">posts 45 and 46</a> was that the video presents a story of <a href="Romantic-kit-authenticity.html">authentic</a>, private heroism, rejecting the public "parade" of fame for the sincere struggle of fatherhood. This is our starting hypothesis: the video champions a quiet, modern Romantic hero.</p>
 
       <h3>Step 2: Engaging the Two Rails to Test the Hypothesis</h3>
       <p>Now we test this hypothesis by analyzing the work's two sides: the shared system it operates within and the singular choices that make it unique.</p>
@@ -32,7 +32,7 @@
           <li><strong>The Pop Song Form:</strong> The song's structure, with its emotionally swelling bridge, is a formal convention that pushes the narrative toward a feeling of transcendence, regardless of the story's details.</li>
           <li><strong>Visual Iconography:</strong> The image of the mother in the doorway gains its power from its relationship to a whole history of similar images, like Dorothea Lange's "Migrant Mother."</li>
       </ul>
-      <p>This rail shows us the <a href="romantic-kit-organic-form.html">mechanical</a>, template-driven elements of the work.</p>
+      <p>This rail shows us the <a href="Romantic-kit-organic-form.html">mechanical</a>, template-driven elements of the work.</p>
 
       <h4>The Psychological Rail (The Singular Practice)</h4>
       <p>Here, we trace the director's specific, unique choices that complicate or deviate from those systems, as noted in <a href="post47.html">post 47</a>.</p>
@@ -52,7 +52,7 @@
       <p>By using the Romantic method, we have moved beyond a simple "for or against" reading to an analysis of the work's complex, layered structure. We have, in a sense, understood it "better than it understood itself."</p>
       
       <hr>
-      <p class="series-note">This post serves as a practical capstone to the <em>Defense of Romanticism</em> series. It demonstrates how the <a href="romantic-quick-kit.html">Quick Kit</a> can be used to produce a rigorous, evidence-based interpretation.</p>
+      <p class="series-note">This post serves as a practical capstone to the <em>Defense of Romanticism</em> series. It demonstrates how the <a href="Romantic-quick-kit.html">Quick Kit</a> can be used to produce a rigorous, evidence-based interpretation.</p>
       <p><a href="index.html">Home</a> | <a href="post58.html">Previous Post</a> | <a href="post60.html">Next Post</a></p>
     </article>
   </main>
