--- a/post53.html
+++ b/post53.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>53 Steelmanning the Romantics: A More Rigorous Toolkit for a Troubled Idea</h2>
       <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s—a worldview I've suggested is inadequate for our current technological moment.</p>
@@ -28,7 +28,7 @@
       <p>This is not a conversion narrative. It is a strategic deep dive. The goal is to build a better toolkit for analysis by first understanding the tools of the very worldview I've been questioning. This series will do three things:</p>
       <ul>
         <li><strong>Isolate the Method:</strong> We will move past the caricature of "sincere feelings" and reconstruct the disciplined, evidence-based interpretive practices the Romantics actually developed. The "author," for them, was not a ghost to be channeled but a <em>reconstructable practice</em> to be traced in the text. We need to understand the logic of this method, even if we ultimately reject its premises.</li>
-        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. Think of it not as a user manual to be adopted, but as a field guide to a foreign country. It contains the key concepts and a step-by-step breakdown of the method. Use it to understand the internal logic of the system we are analyzing.</li>
+        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. Think of it not as a user manual to be adopted, but as a field guide to a foreign country. It contains the key concepts and a step-by-step breakdown of the method. Use it to understand the internal logic of the system we are analyzing.</li>
         <li><strong>Stress-Test the Method Against AI:</strong> Each post in this series will use this toolkit to analyze the core problems of AI. The goal isn't to prove that the Romantic method works. The goal is to ask a more interesting question: What happens when you apply this powerful, 200-year-old interpretive engine to a 21st-century technology it could never have anticipated? What can it illuminate, and where do its foundational assumptions finally break down?</li>
       </ul>
       
@@ -37,7 +37,7 @@
       <p>This series is an argument that to move <em>past</em> the Romantic worldview that still quietly shapes so much of our thinking, we first have to understand it, in its own terms, better than it understood itself.</p>
 
       <hr>
-      <p class="series-note">This post inaugurates the <em>"Steelmanning the Romantics"</em> series. The <a href="romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
+      <p class="series-note">This post inaugurates the <em>"Steelmanning the Romantics"</em> series. The <a href="Romantic-quick-kit.html">Quick Kit</a> is the essential starting point for the posts that follow.</p>
       <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
     </article>
   </main>
