--- a/post61.html
+++ b/post61.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <div class="kit-links-small">
-                <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
+                <a href="Romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
                 <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
             </div>
             <h2>61 A Conflict of Interpretations: Ricoeur's Method for Reading AI</h2>
