--- a/romantic-kit-contexts-america.html
+++ b/romantic-kit-contexts-america.html
@@ -14,7 +14,7 @@
 <main>
   <article>
     <div class="top-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
     <h1>Contexts: America (The Democratic Self)</h1>
     <p>American Romanticism, flourishing a generation after its European counterparts, adapted the movement's core tenets to the unique context of the United States: a young democracy, a vast and untamed landscape, and a cultural drive for independence.</p>
@@ -22,9 +22,9 @@
 
     <h3>Signature Ideas in Practice</h3>
     <ul>
-      <li><strong>Radical <a href="romantic-kit-authenticity.html">Authenticity</a> (Self-Reliance):</strong> Emerson's 1841 essay "Self-Reliance" transformed the Romantic ideal of authenticity into an ethical command. For the Transcendentalists, conformity was a moral failure. The highest virtue was a radical fidelity to one's own inner voice, or "intuition," which they believed was a direct connection to the divine "Over-Soul."</li>
-      <li><strong>The <a href="romantic-kit-organic-form.html">Organic</a> Life:</strong> Thoreau took the ideal of an organic, unified existence literally. His experiment at Walden Pond was an attempt to live a deliberate life, stripped of inessentials, in which his daily rhythms were in harmony with the seasons. His work is a practical application of the Romantic desire to heal the split between the self, nature, and society.</li>
-      <li><strong>The Critique of the <a href="romantic-kit-technology-machine.html">Machine</a> in the Garden:</strong> The American landscape itself—the "wilderness"—was a central character. The Romantics saw it as a source of spiritual renewal, an "organic Eden." Their critique of technology was often framed as a defense of this pastoral ideal against the encroachment of the "machine in the garden," as symbolized by the railroad and the factory.</li>
+      <li><strong>Radical <a href="Romantic-kit-authenticity.html">Authenticity</a> (Self-Reliance):</strong> Emerson's 1841 essay "Self-Reliance" transformed the Romantic ideal of authenticity into an ethical command. For the Transcendentalists, conformity was a moral failure. The highest virtue was a radical fidelity to one's own inner voice, or "intuition," which they believed was a direct connection to the divine "Over-Soul."</li>
+      <li><strong>The <a href="Romantic-kit-organic-form.html">Organic</a> Life:</strong> Thoreau took the ideal of an organic, unified existence literally. His experiment at Walden Pond was an attempt to live a deliberate life, stripped of inessentials, in which his daily rhythms were in harmony with the seasons. His work is a practical application of the Romantic desire to heal the split between the self, nature, and society.</li>
+      <li><strong>The Critique of the <a href="Romantic-kit-technology-machine.html">Machine</a> in the Garden:</strong> The American landscape itself—the "wilderness"—was a central character. The Romantics saw it as a source of spiritual renewal, an "organic Eden." Their critique of technology was often framed as a defense of this pastoral ideal against the encroachment of the "machine in the garden," as symbolized by the railroad and the factory.</li>
     </ul>
 
     <h3>The "Dark" Romantics: A Counterpoint</h3>
@@ -36,7 +36,7 @@
       <li>Henry David Thoreau, <a href="https://www.gutenberg.org/files/205/205-h/205-h.htm"><em>Walden</em> (1854)</a> — The record of a lived experiment in applying Romantic and Transcendentalist principles.</li>
     </ul>
     <div class="bottom-links">
-      <a href="romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
+      <a href="Romantic-quick-kit.html" class="quickkit-pill">← Back to Quick Kit Menu</a>
     </div>
   </article>
 </main>
